# python

./: .gitignore  README.md  pyproject.toml
configs/: model_125m.yaml  model_300m.yaml  toy.yaml  train_default.yaml
docs/: 01_config_and_layout.md  02_tokenizer.md  03_rmsnorm.md  04_rope.md  05_swiglu.md  06_attention.md  07_transformer.md  08_data.md  09_training.md  10_inference.md  11_evaluation.md  12_optimizations.md
notebooks/: kaggle_train_pyllm_125m.ipynb  kernel-metadata.json
scripts/: generate.py  prepare_data.py  train.py  train_tokenizer.py
src/pyllm/: __init__.py  config.py
src/pyllm/data/: __init__.py  clean.py  dedup.py  loader.py  pack.py
src/pyllm/eval/: __init__.py  codegen.py  perplexity.py
src/pyllm/inference/: __init__.py  generate.py  sampler.py
src/pyllm/model/: __init__.py  attention.py  block.py  mlp.py  model.py  rmsnorm.py  rope.py
src/pyllm/tokenizer/: __init__.py  bpe_reference.py  tokenizer.py  train.py
src/pyllm/training/: __init__.py  checkpoint.py  optimizer.py  scheduler.py  trainer.py
tests/: test_attention.py  test_config.py  test_data.py  test_eval.py  test_inference.py  test_integration.py  test_mlp.py  test_model.py  test_rmsnorm.py  test_rope.py  test_tokenizer.py  test_training.py
tokenizer/: pyllm.json
